--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ th::after {
   content: ''; /* Remove sort arrows */
 }
 
-/* --- Responsive table --- */
+/* --- Responsive --- */
 @media (max-width: 768px) {
   #page-wrapper {
     max-width: 100%;
@@ -198,14 +198,10 @@ fetch('teams.csv')
     headers = lines[0].map(h => h.trim());
     indicativeIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
 
-    // Remove rows with no Indicative Selection
+    // Filter out rows with no Indicative Selection
     allRows = lines.slice(1)
       .map(r => r.map(c => c.trim()))
       .filter(r => r[indicativeIndex] && r[indicativeIndex] !== '');
-
-    // Remove the Indicative Selection column from headers and rows
-    headers.splice(indicativeIndex, 1);
-    allRows = allRows.map(r => r.filter((_, i) => i !== indicativeIndex));
 
     populateDropdown();
     renderGroups(allRows);
@@ -213,7 +209,7 @@ fetch('teams.csv')
 
 // --- Populate dropdown ---
 function populateDropdown() {
-  const unique = [...new Set(allRows.map(r => r[indicativeIndex - 1]))];
+  const unique = [...new Set(allRows.map(r => r[indicativeIndex]))];
   const ordered = groupOrder.concat(unique.filter(v => !groupOrder.includes(v)));
   ordered.forEach(v => {
     const opt = document.createElement('option');
@@ -226,13 +222,13 @@ function populateDropdown() {
 // --- Render groups ---
 function renderGroups(rows) {
   container.innerHTML = '';
-  const groups = {};
 
-  rows.forEach(row => {
-    const key = row[row.length - 1]; // Last col is still the grouping key
-    if (!groups[key]) groups[key] = [];
-    groups[key].push(row);
-  });
+  const groups = rows.reduce((acc, row) => {
+    const key = row[indicativeIndex]; // Group by Indicative Selection
+    if (!acc[key]) acc[key] = [];
+    acc[key].push(row);
+    return acc;
+  }, {});
 
   const filterVal = selectionFilter.value;
   const allGroupKeys = Object.keys(groups);
@@ -247,7 +243,7 @@ function renderGroups(rows) {
     const section = document.createElement('section');
     const header = document.createElement('div');
     header.className = 'group-header';
-    header.innerHTML = `${groupName} <span>(${groupRows.length}) ▼</span>`;
+    header.innerHTML = `<span>${groupName}</span><span>(${groupRows.length}) ▼</span>`;
     section.appendChild(header);
 
     const wrapper = document.createElement('div');
@@ -257,23 +253,24 @@ function renderGroups(rows) {
     const thead = document.createElement('thead');
     const headerRow = document.createElement('tr');
 
-    headers.forEach(h => {
+    // Build headers excluding Indicative Selection
+    headers.forEach((h, i) => {
+      if (i === indicativeIndex) return; // skip hidden column
       const th = document.createElement('th');
       th.textContent = h;
       headerRow.appendChild(th);
     });
-
     thead.appendChild(headerRow);
     table.appendChild(thead);
 
     const tbody = document.createElement('tbody');
     groupRows.forEach(r => {
       const tr = document.createElement('tr');
-      // remove grouping column (last col)
-      r.slice(0, -1).forEach((c, idx) => {
+      r.forEach((c, i) => {
+        if (i === indicativeIndex) return; // skip hidden column
         const td = document.createElement('td');
         td.textContent = c;
-        td.setAttribute('data-label', headers[idx]);
+        td.setAttribute('data-label', headers[i]);
         tr.appendChild(td);
       });
       tbody.appendChild(tr);
@@ -286,7 +283,7 @@ function renderGroups(rows) {
 
     header.addEventListener('click', () => {
       wrapper.classList.toggle('hidden');
-      const arrow = header.querySelector('span');
+      const arrow = header.querySelector('span:last-child');
       arrow.textContent = wrapper.classList.contains('hidden')
         ? `(${groupRows.length}) ▲`
         : `(${groupRows.length}) ▼`;
@@ -300,7 +297,7 @@ function applyFilters() {
   const sel = selectionFilter.value;
   const filtered = allRows.filter(r => {
     const matchesSearch = r.some(c => c.toLowerCase().includes(q));
-    const matchesSel = !sel || r[r.length - 1] === sel;
+    const matchesSel = !sel || r[indicativeIndex] === sel;
     return matchesSearch && matchesSel;
   });
   renderGroups(filtered);
@@ -312,7 +309,8 @@ selectionFilter.addEventListener('change', applyFilters);
 // --- Export visible ---
 exportBtn.addEventListener('click', () => {
   const rows = [];
-  rows.push(headers.join(','));
+  const visibleHeaders = headers.filter((_, i) => i !== indicativeIndex);
+  rows.push(visibleHeaders.join(','));
   container.querySelectorAll('section').forEach(section => {
     const wrapper = section.querySelector('.group-content');
     if (wrapper.classList.contains('hidden')) return;
