--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ th::after {
 <body>
 <div id="page-wrapper">
 <header>
-  <a href="https://www.poriruaheatbasketballclub.org" target="_blank">
+  <a href="https://www.poriruaheatbasketball.org" target="_blank">
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
-  <h1>Te Tai Hou Teams – 2025</h1>
+  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
 </header>
 
 <div class="controls">
@@ -328,3 +328,4 @@ exportBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
